--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro molestiae in aliquam cupiditate officiis nesciunt repellat earum omnis? Sed, ipsum.</p>
                 </div>
             </article>
+            <!-- end of single item -->
         </div>
     </section>
     <!-- javascript -->
