--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
         </div>
         <!-- filter buttons-->
         <div class="btn-container">
-            <button class="filter-btn" type="button" data-id="all">all</button>
-            <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
-            <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-            <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+
         </div>
         <!-- menu items -->
         <div class="section-center">
             <!-- single item -->
-            <article class="menu-item">
+            <!-- <article class="menu-item">
                 <img src="menu-item.jpeg" class="photo" alt="menu-item">
                 <div class="item-info">
                     <header>
@@ -38,7 +35,7 @@
                     </header>
                     <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro molestiae in aliquam cupiditate officiis nesciunt repellat earum omnis? Sed, ipsum.</p>
                 </div>
-            </article>
+            </article> -->
             <!-- end of single item -->
         </div>
     </section>
